# AI-Crypto-Hedge-Fund-Manager

./: .gitignore  README.md  agent_test.py  pyproject.toml  setup.py  start_system.sh  test_agents.py  test_main_agent.py  test_news_agent.py  test_one_agent.py
docs/: 00_migration_index.md  01_migration_plan.md  02_main_agent.md  03_swap_agents.md  04_llm_integration.md  05_project_setup.md  06_migration_steps.md  07_migration_summary.md  README.md  README_SETUP.md  RemainingSteps.md  RunningTheSystem.md  Testing.md  understanding_new.md
src/: __init__.py
src/agents/: __init__.py  asi1_agent.py  base.py  coin_info.py  crypto_news.py  fear_greed_index.py  main_agent.py  reward.py  topup.py
src/agents/swap/: __init__.py  eth_usdc.py  swapfinder.py  usdc_eth.py
src/config/: __init__.py  settings.py
src/crypto_project/: main.py
src/crypto_project/utils/: helpers.py
src/models/: __init__.py  requests.py  responses.py
src/scripts/: __init__.py  run_agents.sh
src/services/: __init__.py  asi1.py  llm_service.py
src/services/swap_service/: __init__.py  eth_usdc.py  usdc_eth.py
src/tests/: README.md
src/tests/swap/: __init__.py  test_eth_to_usdc.py  test_swapfinder.py  test_usdc_to_eth.py
src/utils/: __init__.py  errors.py  logging.py
